--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
             <ul>
                 <li>Local data: Until you delete it</li>
                 <li>Cloud data: Until you delete your account</li>
-                <li>Deleted data: Gone within 30 days</li>
+                <li>Deleted data: Gone immediately</li>
             </ul>
             
-            <h3>Kids</h3>
-            <p>Virvi isn't for anyone under 13. If we learn we've collected data from a child under 13, we'll delete it immediately.</p>
+            <h3>Age</h3>
+            <p>Virvi isn't for anyone under 15. If we learn we've collected data from a person under 15, we'll delete it immediately.</p>
             
             <h3>Changes</h3>
             <p>We might update this policy. Check the date at the top to see when it was last updated.</p>
